# trichrombine

./: .gitignore  CLAUDE.md  README.md  combine_rgb_scans.py  crosstalk_correction_handoff.md  pyproject.toml  requirements.txt  rgb_capture.py
src/trichrom/: __init__.py  calibrate_rgb.py  correct_crosstalk.py  measure_crosstalk.py  rgb_capture.py  scanner.py
src/trichrom/legacy/: combine_rgb_scans.py  rgb_capture.py
src/trichrom/lib/: scanner.py
test_images/: BLUE.csv  GREEN.csv  RED.csv  crosstalk.csv  crosstalk_corrected.csv  original.csv
